--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                     </li>
                 </ul>            
             </address>
+            <button type="button" class="mobile-menu-button">
+                <svg class="icon-burger" width="24" height="24">
+                    <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
         </div>
     </header>
     <main>
@@ -61,7 +66,7 @@
                 <h2 class="section-virtues-header visually-hidden">Our virtues</h2>
                 <ul class="list-virtues list">
                     <li class="list-virtues-item">
-                        <div class="icon-virtues-container">
+                        <div class="icon-virtues-container visually-hidden">
                             <svg class="icon-virtues" width="64" height="64" aria-label="icon antenna">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
@@ -70,7 +75,7 @@
                         <p class="paragraph-virtues">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="list-virtues-item">
-                        <div class="icon-virtues-container">
+                        <div class="icon-virtues-container visually-hidden">
                             <svg class="icon-virtues" width="64" height="64" aria-label="icon clock">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
@@ -79,7 +84,7 @@
                         <p class="paragraph-virtues">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="list-virtues-item">
-                        <div class="icon-virtues-container">
+                        <div class="icon-virtues-container visually-hidden">
                             <svg class="icon-virtues" width="64" height="64" aria-label="icon diagram">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
@@ -88,7 +93,7 @@
                         <p class="paragraph-virtues">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="list-virtues-item">
-                        <div class="icon-virtues-container">
+                        <div class="icon-virtues-container visually-hidden">
                             <svg class="icon-virtues" width="64" height="64" aria-label="icon astronaut">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
@@ -441,7 +446,8 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open"> -->
+    <div class="backdrop">
         <div class="modal">
             <button 
                 class="close-model-button" 
