--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     <footer class="page-footer">
         <div class="footer-container container">
             <div class="footer-description">
-                <a class="main-logo footer-logo link" href="./index.html">Web<span class="span-footer-logo">Studio</span></a>
+                <a class="footer-logo link" href="./index.html">Web<span class="span-footer-logo">Studio</span></a>
                 <p class="page-footer-paragraph">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
