--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                 <ul class="section-team-list list">
                     <li class="list-team-item">
                         <img 
-                            class="team-img" 
+                            class="team-img"
+                            srcset="
+                                ./images/mark-guerrero@2x.jpg 2x,
+                                ./images/mark-guerrero@3x.jpg 3x"
                             src="./images/mark-guerrero.jpg" 
                             alt="Mark Guerrero" 
                             width="264" 
@@ -152,7 +155,10 @@
                     </li>
                     <li class="list-team-item">
                         <img 
-                            class="team-img" 
+                            class="team-img"
+                            srcset="
+                                ./images/tom-ford@2x.jpg 2x,
+                                ./images/tom-ford@3x.jpg 3x"
                             src="./images/tom-ford.jpg" 
                             alt="Tom Ford" 
                             width="264" 
@@ -194,7 +200,10 @@
                     </li>
                     <li class="list-team-item">
                         <img 
-                            class="team-img" 
+                            class="team-img"
+                            srcset="
+                                ./images/camila-garcia@2x.jpg 2x,
+                                ./images/camila-garcia@3x.jpg 3x"
                             src="./images/camila-garcia.jpg" 
                             alt="Camila Garcia" 
                             width="264" 
@@ -236,7 +245,10 @@
                     </li>
                     <li class="list-team-item">
                         <img 
-                            class="team-img" 
+                            class="team-img"
+                            srcset="
+                                ./images/daniel-wilson@2x.jpg 2x,
+                                ./images/daniel-wilson@3x.jpg 3x"
                             src="./images/daniel-wilson.jpg" 
                             alt="Daniel Wilson" 
                             width="264" 
@@ -287,10 +299,19 @@
                         <div class="conteiner-overflow">
                             <img 
                                 class="portfolio-img" 
-                                src="./images/app.jpg" 
-                                alt="App" 
-                                width="360" 
-                                height="300">
+                                srcset=
+                                    "./images/desktop/app.jpg 360w,
+                                    ./images/tablet/app.jpg 356w,
+                                    ./images/mobile/app.jpg 288w,
+                                    ./images/desktop/app@2x.jpg 720w,
+                                    ./images/tablet/app@2x.jpg 712w,
+                                    ./images/mobile/app@2x.jpg 576w,
+                                    ./images/desktop/app@3x.jpg 1080w,
+                                    ./images/tablet/app@3x.jpg 1068w,
+                                    ./images/mobile/app@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/app.jpg"
+                                alt="App">
                             <p class="paragraph-portfolio-overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -302,7 +323,23 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="conteiner-overflow">
-                            <img class="portfolio-img" src="./images/scan-qr.jpg" alt="App" width="360" height="300">
+                            <img 
+                                class="portfolio-img"
+                                srcset=
+                                    "./images/desktop/scan-qr.jpg 360w,
+                                    ./images/tablet/scan-qr.jpg 356w,
+                                    ./images/mobile/scan-qr.jpg 288w,
+                                    ./images/desktop/scan-qr@2x.jpg 720w,
+                                    ./images/tablet/scan-qr@2x.jpg 712w,
+                                    ./images/mobile/scan-qr@2x.jpg 576w,
+                                    ./images/desktop/scan-qr@3x.jpg 1080w,
+                                    ./images/tablet/scan-qr@3x.jpg 1068w,
+                                    ./images/mobile/scan-qr@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/scan-qr.jpg"
+                                alt="Scan QR" 
+                                width="360" 
+                                height="300">
                             <p class="paragraph-portfolio-overlay">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -315,9 +352,20 @@
                     <li class="portfolio-item">
                         <div class="conteiner-overflow">
                             <img 
-                                class="portfolio-img" 
-                                src="./images/laptop-and-phone.jpg" 
-                                alt="App" 
+                                class="portfolio-img"
+                                srcset=
+                                    "./images/desktop/laptop-and-phone.jpg 360w,
+                                    ./images/tablet/laptop-and-phone.jpg 356w,
+                                    ./images/mobile/laptop-and-phone.jpg 288w,
+                                    ./images/desktop/laptop-and-phone@2x.jpg 720w,
+                                    ./images/tablet/laptop-and-phone@2x.jpg 712w,
+                                    ./images/mobile/laptop-and-phone@2x.jpg 576w,
+                                    ./images/desktop/laptop-and-phone@3x.jpg 1080w,
+                                    ./images/tablet/laptop-and-phone@3x.jpg 1068w,
+                                    ./images/mobile/laptop-and-phoner@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/laptop-and-phone.jpg"
+                                alt="laptop and phone" 
                                 width="360" 
                                 height="300">
                             <p class="paragraph-portfolio-overlay">
@@ -332,9 +380,20 @@
                     <li class="portfolio-item">
                         <div class="conteiner-overflow">
                             <img 
-                                class="portfolio-img" 
-                                src="./images/car-dashboard.jpg" 
-                                alt="App" 
+                                class="portfolio-img"
+                                srcset=
+                                    "./images/desktop/car-dashboard.jpg 360w,
+                                    ./images/tablet/car-dashboard.jpg 356w,
+                                    ./images/mobile/car-dashboard.jpg 288w,
+                                    ./images/desktop/car-dashboard@2x.jpg 720w,
+                                    ./images/tablet/car-dashboard@2x.jpg 712w,
+                                    ./images/mobile/car-dashboard@2x.jpg 576w,
+                                    ./images/desktop/car-dashboard@3x.jpg 1080w,
+                                    ./images/tablet/car-dashboard@3x.jpg 1068w,
+                                    ./images/mobile/car-dashboard@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/car-dashboard.jpg"
+                                alt="car dashboard"
                                 width="360" 
                                 height="300">
                             <p class="paragraph-portfolio-overlay">
@@ -349,9 +408,20 @@
                     <li class="portfolio-item">
                         <div class="conteiner-overflow">
                             <img 
-                                class="portfolio-img" 
-                                src="./images/phone-wallpaper.jpg" 
-                                alt="App" 
+                                class="portfolio-img"
+                                srcset=
+                                    "./images/desktop/phone-wallpaper.jpg 360w,
+                                    ./images/tablet/phone-wallpaper.jpg 356w,
+                                    ./images/mobile/phone-wallpaper.jpg 288w,
+                                    ./images/desktop/phone-wallpaper@2x.jpg 720w,
+                                    ./images/tablet/phone-wallpaper@2x.jpg 712w,
+                                    ./images/mobile/phone-wallpaper@2x.jpg 576w,
+                                    ./images/desktop/phone-wallpaper@3x.jpg 1080w,
+                                    ./images/tablet/phone-wallpaper@3x.jpg 1068w,
+                                    ./images/mobile/phone-wallpaper@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/phone-wallpaper.jpg"
+                                alt="phone wallpaper" 
                                 width="360" 
                                 height="300">
                             <p class="paragraph-portfolio-overlay">
@@ -367,8 +437,19 @@
                         <div class="conteiner-overflow">
                             <img 
                                 class="portfolio-img" 
-                                src="./images/happy-woman.jpg" 
-                                alt="App" 
+                                srcset=
+                                    "./images/desktop/happy-woman.jpg 360w,
+                                    ./images/tablet/happy-woman.jpg 356w,
+                                    ./images/mobile/happy-woman.jpg 288w,
+                                    ./images/desktop/happy-woman@2x.jpg 720w,
+                                    ./images/tablet/happy-woman@2x.jpg 712w,
+                                    ./images/mobile/happy-woman@2x.jpg 576w,
+                                    ./images/desktop/happy-woman@3x.jpg 1080w,
+                                    ./images/tablet/happy-woman@3x.jpg 1068w,
+                                    ./images/mobile/happy-woman@3x.jpg 864w,"
+                                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                                src="./images/desktop/happy-woman.jpg"
+                                alt="happy woman" 
                                 width="360" 
                                 height="300">
                             <p class="paragraph-portfolio-overlay">
